--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferlandy</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Linking to the external CSS file -->
 </head>
 <body>
 
     <!-- Header Section -->
-    <header>
+    <header class="header-example">
         <h1>Welcome to Ferlandy's Page</h1>
         <p>Your go-to spot for learning and fun!</p>
     </header>
 
     <!-- Navigation Menu -->
     <nav>
-        <ul>
+        <ul class="list-example">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -32,7 +33,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hi! I'm Karim AKA Ferlandy, a student learning the ropes of coding and design. Here are a few things I'm passionate about:</p>
-            <ul>
+            <ul class="list-example">
                 <li>Web Development</li>
                 <li>Graphic Design</li>
                 <li>Video Games</li>
@@ -42,10 +43,9 @@
         <section id="contact">
             <h2>Contact Me</h2>
             <p>If you'd like to get in touch, feel free to reach out through the following methods:</p>
-            <ul>
+            <ul class="list-example">
                 <li>Email: kferlandyy@gmail.com</li>
                 <li>Phone: +358451459871</li>
-                <li>Twitter: @ferlandy</li>
             </ul>
         </section>
     </main>
