--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <!-- Link to Second Page -->
+    <a href="second.html" class="top-link">Go to Second Page</a>
+
     <!-- Header Section -->
     <header class="header-example">
         <h1>Welcome to Ferlandy's Page</h1>
@@ -48,6 +51,7 @@
                 <li>Phone: +358451459871</li>
             </ul>
         </section>
+
     </main>
 
     <!-- Footer Section -->
